<resources>
    <string name="app_name">Dialer</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="star_button">*</string>
    <string name="zero_button">0</string>
    <string name="diez_button">#</string>
    <string name="call_button">Call</string>
    <string name="delete_button">Del</string>
    <string name="length_warning">Number needs to be >= 4</string>
</resources>
